--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,22 @@
             <version>5.0.0-RC3</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.firebase</groupId>
+            <artifactId>firebase-admin</artifactId>
+            <version>5.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.8.0-alpha2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-nop</artifactId>
+            <version>1.8.0-alpha2</version>
+        </dependency>
     </dependencies>
 
 </project>
