--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>Customer</module>
         <module>Database</module>
         <module>API</module>
+        <module>Cashier</module>
     </modules>
 
     <dependencies>
