--- a/Cashier/pom.xml
+++ b/Cashier/pom.xml
@@ -10,6 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>BuffetCashier</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>ku.sci.cs</groupId>
+            <artifactId>BuffetAPI</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
